# gromacs-dftbplus

./: .gitignore  CMakeLists.txt  Plumed.cmake  Plumed.h  Plumed.inc
api/legacy/include/gromacs/math/: units.h
api/legacy/include/gromacs/mdtypes/: inputrec.h  md_enums.h
api/nblib/samples/: CMakeLists.txt
docs/user-guide/: mdp-options.rst
share/template/: CMakeLists.txt
src/: CMakeLists.txt  config.h.cmakein
src/gromacs/: CMakeLists.txt
src/gromacs/analysisdata/: dataframe.h
src/gromacs/applied_forces/: CMakeLists.txt  magneticfield.cpp  magneticfield.h
src/gromacs/applied_forces/densityfitting/: densityfitting.h
src/gromacs/applied_forces/tests/: electricfield.cpp
src/gromacs/ewald/: pme.cpp  pme.h  pme_gather.cpp  pme_gather.h  pme_only.cpp  pme_spread.cpp  pme_spread.h
src/gromacs/ewald/tests/: pmetestcommon.cpp
src/gromacs/fileio/: tpxio.cpp
src/gromacs/gmxana/: gmx_covar.cpp
src/gromacs/gmxpreprocess/: grompp.cpp  readir.cpp  topio.cpp  topio.h
src/gromacs/gmxpreprocess/tests/: readir.cpp
src/gromacs/gmxpreprocess/tests/refdata/: GetIrTest_AcceptsDefineParametersWithValuesIncludingAssignment.xml  GetIrTest_AcceptsElectricField.xml  GetIrTest_AcceptsElectricFieldOscillating.xml  GetIrTest_AcceptsElectricFieldPulsed.xml  GetIrTest_AcceptsEmptyLines.xml  GetIrTest_AcceptsMimic.xml  GetIrTest_HandlesDifferentKindsOfMdpLines.xml
src/gromacs/mdlib/: CMakeLists.txt  call_nn.c  call_nn.h  force.cpp  force.h  forcerec.cpp  forcerec.h  gmx_omp_nthreads.cpp  hello_tf  mdatoms.cpp  mdoutf.cpp  mdoutf.h  qm_dftbplus.cpp  qm_dftbplus.h  qm_dftbplus_pytorch.cpp  qm_dftbplus_pytorch.h  qm_dftbplus_tensorflow.cpp  qm_dftbplus_tensorflow.h  qm_gamess.cpp  qm_gamess.h  qm_gaussian.cpp  qm_gaussian.h  qm_mopac.cpp  qm_mopac.h  qm_nn.cpp  qm_nn.h  qm_orca.cpp  qm_orca.h  qm_pytorch.cpp  qm_pytorch.h  qm_tensorflow.cpp  qm_tensorflow.h  qmmm-calculation.cpp  qmmm.cpp  qmmm.h  sim_util.cpp  test.c  trajectory_writing.cpp  vcm.cpp
src/gromacs/mdrun/: legacymdrunoptions.cpp  legacymdrunoptions.h  md.cpp  mdmodules.cpp  mimic.cpp  minimize.cpp  replicaexchange.cpp  rerun.cpp  runner.cpp  shellfc.cpp  tpi.cpp
src/gromacs/mdtypes/: forcerec.h  iforceprovider.h  inputrec.cpp  inputrec.h  md_enums.cpp  md_enums.h  mdatom.h  simulation_workload.h
src/gromacs/modularsimulator/: forceelement.cpp  modularsimulator.h
src/gromacs/taskassignment/: resourcedivision.cpp
src/gromacs/timing/: wallcycle.cpp  wallcycle.h
src/gromacs/timing/include/gromacs/timing/: wallcycle.h
src/gromacs/transfer/: CMakeLists.txt  adaptive.cpp  charge_transfer.c  charge_transfer.h  dftb-obsolete.c  do_rksuite.cpp  get_mm_params.cpp  gradient.cpp  initialize.cpp  interface_dftbplus.cpp  lapack.cpp  leftovers.c  machine_learning.cpp  negf.cpp  negf_dummy.cpp  orbital_phase.cpp  output.cpp  parallelization.cpp  phases_esp_assemble.cpp  prepare.cpp  protein_preprocessor.cpp  qm_dftbplus.cpp  qm_dftbplus.h  qmmm-calculation.cpp  qmmm.cpp  qmmm.h  quantum_auxiliary.cpp  quantum_broyden.cpp  quantum_driver.cpp  rksuite.cpp  rksuite.h  search_starting_site.cpp  transfer.h  wf_project_or_decomp.cpp
src/gromacs/utility/: flags.h
src/programs/: CMakeLists.txt
